tests/NormalTests/paczka1/small_fuzzy/55895039.err
Error in line 7: KKhUP4 S553 132,45
Error in line 6: XU40jSH A808 63,2
